# BPI-S905X3-Android9

./: .gitignore  README.md  env.sh
bootable/recovery/: Android.mk  device.cpp  device.h  install.cpp  recovery.cpp  roots.cpp  screen_ui.cpp  ui.cpp  ui.h
bootloader/uboot-repo/: .gitignore  build.sh  flash-bootloader.sh
common/: MAINTAINERS
common/mm/: cma.c
compatibility/cdd/: cdd_gen.sh  make_cdd.py
cts/: .gitignore  Android.mk  CleanSpec.mk  CtsCoverage.mk  PREUPLOAD.cfg  error_prone_rules.mk  error_prone_rules_tests.mk  run_unit_tests.sh
frameworks/av/: Android.bp
frameworks/data-binding/: .gitignore
frameworks/layoutlib/: Android.mk
frameworks/ml/: OWNERS
frameworks/multidex/: build.gradle  version.gradle
frameworks/rs/: Android.bp
hardware/interfaces/: Android.bp  CleanSpec.mk  current.txt  update-base-files.sh
hardware/libhardware_legacy/: Android.bp  OWNERS  power.c
kernel/configs/: OWNERS  README.md
kernel/tests/: Android.bp
prebuilts/build-tools/: build-prebuilts.sh  manifest.xml
prebuilts/checkcolor/: README.md  checkcolor.py
prebuilts/checkstyle/: OWNERS  PREUPLOAD.cfg  README  checkstyle.py
prebuilts/clang-tools/: build-prebuilts.sh  manifest.xml
prebuilts/deqp/: README
prebuilts/devtools/: OWNERS
prebuilts/gradle-plugin/: Android.bp
prebuilts/ktlint/: ktlint.py
prebuilts/misc/: Android.mk
sdk/: OWNERS
system/bt/tools/mcap_tool/: Android.bp  BUILD.gn  mcap_test_app.cc  mcap_test_app.h  mcap_test_mcl.cc  mcap_test_mcl.h  mcap_test_mdep.cc  mcap_test_mdep.h  mcap_test_mdl.cc  mcap_test_mdl.h  mcap_tool.cc
(+74539 files in other folders)
