#
#  Copyright 2017 Google, Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at:
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
executable("mcap_tool") {
  testonly = true
  sources = [
    "mcap_tool.cc",
    "mcap_test_app.cc",
    "mcap_test_mcl.cc",
    "mcap_test_mdep.cc",
    "mcap_test_mdl.cc",
  ]
  include_dirs = [
    "//",
    "//internal_include",
    "//stack/include",
    "//btif/include",
    "//btcore/include",
    "//tools/mcap_tool",
  ]
  libs = [
    "-lpthread",
    "-lrt",
    "-ldl",
  ]
  deps = [
    "//btcore",
    "//osi",
    "//third_party/libchrome:base",
    "//types",
  ]
}
